test/fail_compile/upcased_escapes.tas
.word '\B', '\F', '\N', '\R', '\T', '\V'
.chars "\B\F\N\R\T\V"
